[project]
name = "to-markdown"
version = "0.1.0"
description = ""
authors = [
    {name = "Moises Soto",email = "35436843+moisoto@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "to_markdown", from = "src"}]

[tool.poetry.scripts]
to-markdown = "cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
